--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh workflow run --repo Kbs56/test-gh-action
+          gh workflow run main.yaml --repo Kbs56/test-gh-action
           sleep 2s
           run_id=$(gh run list --workflow main.yaml --limit 1 --json databaseId | jq -r '.[0].databaseId')
           echo $run_id
