--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Call Workflow
         run: |
-          echo "${{ secrets.GH_TOKEN }} | gh auth login --with-token
+          echo "${{ secrets.GH_TOKEN }}" | gh auth login --with-token
           gh workflow run main.yaml --repo Kbs56/test-gh-action
           sleep 2s
           run_id=$(gh run list --workflow main.yaml --limit 1 --json databaseId | jq -r '.[0].databaseId')
