--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,6 +11,6 @@ jobs:
         run: |
           echo "${{ secrets.GH_TOKEN }}" | gh auth login --with-token
           gh workflow run main.yaml --repo Kbs56/test-gh-action
-          sleep 2s
-          run_id=$(gh run list --workflow main.yaml --limit 1 --json databaseId | jq -r '.[0].databaseId')
+          sleep 3s
+          run_id=$(gh run list --workflow main.yaml --repo Kbs56/test-gh-action --limit 1 --json databaseId | jq -r '.[0].databaseId')
           echo $run_id
