--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,3 +30,8 @@ jobs:
         run: |
           echo ${{ steps.get-ids.outputs.app_name }}
           echo ${{ steps.get-ids.outputs.app_version }}
+
+      - name: Set as Vars in Target Repo
+        run: |
+          gh variable set APP_NAME --body ${{ steps.get-ids.outputs.app_name }}
+          gh variable set APP_VERSION --body ${{ steps.get-ids.outputs.app_version }}
